@@ -6,6 +6,7 @@ Bower 0.10-unreleased
 * Support tab expansion for query:.
 * Support ~NAME as a shorthand for query:NAME.
 * Support Shift-Tab to cycle through completions in reverse.
+* Make path completion work more smoothly.
 
 Bower 0.9 (2018-10-07)
 ======================
